Create project, cookie, swagger 403 response on error
