# Controllers/AccountController.cs
@@ -6,6 +6,7 @@ using Microsoft.AspNetCore.Mvc;
 using Microsoft.EntityFrameworkCore;
 using Microsoft.IdentityModel.Tokens;
 using System;
+using System.Collections.Generic;
 using System.IdentityModel.Tokens.Jwt;
 using System.IO;
 using System.Linq;
@@ -13,6 +14,10 @@ using System.Security.Claims;
 using System.Text;
 using System.Text.Json;
 using System.Threading.Tasks;
+using Microsoft.AspNetCore.Authentication;
+using Microsoft.AspNetCore.Authentication.Cookies;
+using Microsoft.AspNetCore.Authorization;
+using System.Net;
 
 namespace Interchoice.Controllers
 {
@@ -41,32 +46,69 @@ namespace Interchoice.Controllers
         {
             using (var context = new ApplicationContext(new DbContextOptionsBuilder<ApplicationContext>().UseSqlServer(Startup._conStr).Options))
             {
-                //context.Database.Migrate();
                 context.ProjectsInfo = context.Set<ProjectInfo>();
-                context.ProjectsInfo.Add(new ProjectInfo() { UserId = 1, Name = "name", FullDescription = "full", ShortDescription = "short", Overview = formFile.file.Name });
+                context.ProjectsInfo.Add(new ProjectInfo() { UserId = "1", Name = "name", FullDescription = "full", ShortDescription = "short", Overview = formFile.file.Name });
                 context.SaveChanges();
                 return Ok();
             }
         }
 
+        [Authorize]
+        [HttpGet("Test")]
+        public IActionResult Test()
+        {
+            var smt = GetValue(HttpContext.User, ClaimTypes.Name);
+
+            return Ok($"{smt}");
+        }
+
+        /// <summary>
+        /// Create project handle
+        /// </summary>
+        /// <param name="projectModel"></param>
+        /// <returns></returns>
+        /// <response code="200 (4)">Successful created project</response>
+        /// <response code="403 (140)">Exception message</response>
+        [Authorize]
         [EnableCors]
         [HttpPost("CreateProject")]
-        public async Task<IActionResult> CreateProject([FromBody] CreateProjectModel projectModel)
+        public async Task<IActionResult> CreateProject(CreateProjectModel projectModel)
         {
             try
             {
-                if (!Directory.Exists(Directory.GetCurrentDirectory() + "\\Upload\\"))
-                    Directory.CreateDirectory(Directory.GetCurrentDirectory() + "\\Upload\\");
-                using (FileStream fileStream = System.IO.File.Create(Directory.GetCurrentDirectory() + "\\Upload\\" + projectModel.Overview.FileName))
+                var email = GetValue(HttpContext.User, ClaimTypes.Name);
+                var emailName = email.Split('@').First();
+                var userFolderName = $"\\{emailName}\\";
+                var projectName = $"{projectModel.Name}\\";
+                var user = await _userManager.FindByEmailAsync(email);
+                if (!Directory.Exists(Directory.GetCurrentDirectory() + userFolderName))
+                    Directory.CreateDirectory(Directory.GetCurrentDirectory() + userFolderName);
+                if (!Directory.Exists(Directory.GetCurrentDirectory() + userFolderName + projectName))
+                    Directory.CreateDirectory(Directory.GetCurrentDirectory() + userFolderName + projectName);
+                using (FileStream fileStream = System.IO.File.Create(Directory.GetCurrentDirectory() + userFolderName + projectName + projectModel.Overview.FileName))
                 {
                     projectModel.Overview.CopyTo(fileStream);
                     fileStream.Flush();
-                    return Json(new TransportResult(3, $"Successful created project", true));
+                    using (var context = new ApplicationContext(new DbContextOptionsBuilder<ApplicationContext>().UseSqlServer(Startup._conStr).Options))
+                    {
+                        context.ProjectsInfo = context.Set<ProjectInfo>();
+                        context.ProjectsInfo.Add(new ProjectInfo()
+                        {
+                            UserId = user.Id,
+                            Name = projectModel.Name,
+                            FullDescription = projectModel.FullDescription,
+                            ShortDescription = projectModel.ShortDescription,
+                            Overview = projectModel.Overview.Name
+                        });
+                        context.SaveChanges();
+                    }
+                    return Json(new TransportResult(4, $"Successful created project", true));
                 }
             }
             catch (Exception ex)
             {
-                return Json(new TransportResult(130, $"{ex.Message}", false));
+                Response.StatusCode = (int)HttpStatusCode.Forbidden;
+                return Json(new TransportResult(140, $"{ex.Message}", false));
             }
         }
 
@@ -75,58 +117,77 @@ namespace Interchoice.Controllers
         /// </summary>
         /// <param name="registerVm"></param>
         /// <returns></returns>
-        /// <response code="100">'@email' is not valid email</response>  
-        /// <response code="110">'@email' is already in use</response>  
-        /// <response code="1">Successful register for: '@email'</response>  
-        /// <response code="200">Something went wrong while saving user to database: '@email'</response>  
+        /// <response code="403 (100)">'@email' is not valid email</response>  
+        /// <response code="403 (110)">'@email' is already in use</response>  
+        /// <response code="200 (1)">Successful register for: '@email'</response>  
+        /// <response code="403 (120)">Something went wrong while saving user to database: '@email'</response>  
         [EnableCors]
         [HttpPost("Register")]
-        [ProducesResponseType(100)]
-        [ProducesResponseType(110)]
-        [ProducesResponseType(1)]
-        [ProducesResponseType(200)]
         public async Task<IActionResult> RegisterAsync([FromBody] RegisterViewModel registerVm)
         {
             if (!IsValidEmailAddress(registerVm.Email))
+            {
+                Response.StatusCode = (int)HttpStatusCode.Forbidden;
                 return Json(new TransportResult(100, $"'{registerVm.Email}' is not valid email", false));
+            }
 
             var users = _userManager.Users.ToList();
             // check for same email
             if (users.Any(x => x.Email == registerVm.Email))
+            {
+                Response.StatusCode = (int)HttpStatusCode.Forbidden;
                 return Json(new TransportResult(110, $"'{registerVm.Email}' is already in use", false));
+            }
 
             var user = new User() { UserName = registerVm.Email, Email = registerVm.Email, EmailConfirmed = true, FirstName = registerVm.FirstName, LastName = registerVm.LastName, BirthDate = registerVm.BirthDate, Country = registerVm.Country };
-            var result = await _userManager.CreateAsync(user, registerVm.PasswordHash);
+            var result = await _userManager.CreateAsync(user, registerVm.Password);
             if (result.Succeeded)
                 return Json(new TransportResult(1, $"Successful register for: '{user.UserName}'", true));
             else
-                return Json(new TransportResult(200, $"Something went wrong while saving user to database: '{user.Email}' \n{string.Join("\n", result.Errors.Select(x => x.Description))}", false));
+            {
+                Response.StatusCode = (int)HttpStatusCode.Forbidden;
+                return Json(new TransportResult(120, $"Something went wrong while saving user to database: '{user.Email}' \n{string.Join("\n", result.Errors.Select(x => x.Description))}", false));
+            }
         }
-
 
         /// <summary>
         /// Login user using credentionals: password and email
         /// </summary>
         /// <param name="loginVm"></param>
         /// <returns></returns>
-        /// /// <response code="2">Successful login, returns token in value field</response>  
-        /// /// <response code="120">Email or password is incorrect</response>  
+        /// <response code="200 (2)">Successful login, returns token in value field</response>  
+        /// <response code="403 (130)">Email or password is incorrect</response>  
         [EnableCors]
         [HttpPost("Login")]
-        [ProducesResponseType(120)]
         public async Task<IActionResult> AuthenticateAsync([FromBody] LoginViewModel loginVm)
         {
             var user = await _userManager.FindByEmailAsync(loginVm.Email);
 
-            var result = await _signInManager.PasswordSignInAsync(loginVm.Email, loginVm.PasswordHash, false, false);
+            var result = await _signInManager.PasswordSignInAsync(loginVm.Email, loginVm.Password, false, false);
             if (!result.Succeeded)
-                return Json(new TransportResult(120, $"Email or password is incorrect", false));
+            {
+                Response.StatusCode = (int)HttpStatusCode.Forbidden;
+                return Json(new TransportResult(130, $"Email or password is incorrect", false));
+            }
 
             // authentication successful so generate jwt token
             user.JwtToken = GenerateJwtToken(user);
             await _userManager.UpdateAsync(user);
+            await Authenticate(loginVm.Email);
 
             return Json(new TransportResult(2, "", true, user.JwtToken));
+        }
+
+        /// <summary>
+        /// Logout handler
+        /// </summary>
+        /// <returns></returns>
+        /// <response code="200 (3)">Logout complete</response>
+        [HttpGet("Logout")]
+        public async Task<IActionResult> Logout()
+        {
+            await HttpContext.SignOutAsync(CookieAuthenticationDefaults.AuthenticationScheme);
+            return Json(new TransportResult(3, "Logout complete", true));
         }
 
         private bool IsValidEmailAddress(string email)
@@ -154,6 +215,27 @@ namespace Interchoice.Controllers
             };
             var token = tokenHandler.CreateToken(tokenDescriptor);
             return tokenHandler.WriteToken(token);
+        }
+
+        private async Task Authenticate(string userName)
+        {
+            // создаем один claim
+            var claims = new List<Claim>
+            {
+                new Claim(ClaimsIdentity.DefaultNameClaimType, userName)
+            };
+            // создаем объект ClaimsIdentity
+            ClaimsIdentity id = new ClaimsIdentity(claims, "ApplicationCookie", ClaimsIdentity.DefaultNameClaimType, ClaimsIdentity.DefaultRoleClaimType);
+            // установка аутентификационных куки
+            await HttpContext.SignInAsync(CookieAuthenticationDefaults.AuthenticationScheme, new ClaimsPrincipal(id));
+        }
+
+        private string GetValue(ClaimsPrincipal principal, string key)
+        {
+            if (principal == null)
+                return string.Empty;
+
+            return principal.FindFirstValue(key);
         }
     }
 }
