# Models/ProjectInfo.cs
@@ -1,0 +1,19 @@
+﻿using Microsoft.AspNetCore.Http;
+using System;
+using System.ComponentModel.DataAnnotations;
+using System.ComponentModel.DataAnnotations.Schema;
+
+namespace Interchoice.Models
+{
+    [Table("ProjectInfo")]
+    public class ProjectInfo
+    {
+        [Key]
+        public Guid ProjectId { get; set; } = Guid.NewGuid();
+        public string UserId { get; set; }
+        public string Name { get; set; }
+        public string Overview { get; set; }
+        public string ShortDescription { get; set; }
+        public string FullDescription { get; set; }
+    }
+}
