# Models/RegisterViewModel.cs
@@ -21,10 +21,10 @@ namespace Interchoice.Models
 
         [Required]
         [DataType(DataType.Password)]
-        public string PasswordHash { get; set; }
+        public string Password { get; set; }
 
         [Required]
         [DataType(DataType.Password)]
-        public string PasswordHashCheck { get; set; }
+        public string ConfirmPassword { get; set; }
     }
 }
